更改目录结构 这个仓库作为自己服务器架构的submodule

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,2 @@
-project(myserver)
-cmake_minimum_required(VERSION 3.4)
-
-include_directories(libuv/include)
-include_directories(myuv)
-
-add_subdirectory(libuv)
-add_subdirectory(myuv)
-add_subdirectory(gateway)
+add_subdirectory (myuv)
+SET_PROPERTY(TARGET myuv PROPERTY FOLDER "libuv")
