一些修改 增加了从conn缓冲区读取到用户buffer 增加了connect接口用于客户端开发

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,2 +1,4 @@
+include_directories(libuv/include)
+add_subdirectory(libuv)
 add_subdirectory (myuv)
 SET_PROPERTY(TARGET myuv PROPERTY FOLDER "libuv")
