删除libcurl封装，有一些问题

--- a/myuv/CMakeLists.txt
+++ b/myuv/CMakeLists.txt
@@ -13,6 +13,7 @@ set(myuvfiles
 
 
 add_library(myuv_a STATIC ${myuvfiles})
+target_link_libraries(myuv_a uv_a)
 
 add_executable(myuv Main.cpp)
 target_link_libraries(myuv myuv_a)
